--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "daisyui": "^5.5.18",
     "next": "16.1.6",
     "pg": "^8.18.0",
     "react": "19.2.3",
