--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "daisyui": "^5.5.18",
+    "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "pg": "^8.18.0",
     "react": "19.2.3",
