--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   },
   "dependencies": {
     "daisyui": "^5.5.18",
+    "katex": "^0.16.28",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "pg": "^8.18.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-markdown": "^10.1.0",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
