--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,3 @@
 DATABASE_URL=postgresql://YOUR_DB_USER:YOUR_DB_PASSWORD@YOUR_RDS_ENDPOINT:5432/YOUR_DB_NAME
+OPENAI_API_KEY=your_openai_api_key
+OPENAI_MODEL=gpt-4o-mini # optional
