--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prepare": "husky"
   },
   "dependencies": {
-    "daisyui": "^5.5.18",
+    "@heroui/react": "2.8.8",
+    "framer-motion": "12.34.0",
     "katex": "^0.16.28",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
