--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 OPENAI_API_KEY=your_openai_api_key
 OPENAI_MODEL=gpt-5-nano # optional
+
+DATABASE_URL=postgresql://ti:ti@localhost:5432/ti?schema=ti_app
+
+AUTH_GOOGLE_ID=your_google_oauth_client_id
+AUTH_GOOGLE_SECRET=your_google_oauth_client_secret
