--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
   },
   "dependencies": {
     "@heroui/react": "2.8.8",
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^6.19.2",
     "framer-motion": "12.34.0",
     "katex": "^0.16.28",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
+    "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -33,6 +36,7 @@
     "eslint-config-next": "16.1.6",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
+    "prisma": "^6.19.2",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^4.0.18"
