--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroui/react": "2.8.8",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.19.2",
+    "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "framer-motion": "12.34.0",
     "katex": "^0.16.28",
