--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-OPENAI_API_KEY=your_openai_api_key
-OPENAI_MODEL=gpt-5-nano # optional
+AI_API_KEY=your_ai_api_key
+AI_MODEL=deepseek-chat # optional
 
 DATABASE_URL=postgresql://ti:ti@localhost:5432/ti?schema=ti
 
