--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "deploy:build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
+    "tool:question-ai": "tsx tools/quesion-ai/cli.ts",
     "lint": "eslint",
     "test": "vitest run --passWithNoTests",
     "test:staged": "vitest related --run --passWithNoTests",
@@ -20,6 +21,7 @@
     "@vercel/analytics": "^1.6.1",
     "@vercel/speed-insights": "^1.3.1",
     "canvas-confetti": "^1.9.4",
+    "dotenv": "^16.6.1",
     "framer-motion": "12.34.0",
     "katex": "^0.16.28",
     "lucide-react": "^0.563.0",
@@ -39,12 +41,14 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "commander": "^14.0.2",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "husky": "^9.1.7",
     "lint-staged": "^16.2.7",
     "prisma": "^6.19.2",
     "tailwindcss": "^4",
+    "tsx": "^4.20.6",
     "typescript": "^5",
     "vitest": "^4.0.18"
   },
