--- a/tsconfig.json
+++ b/tsconfig.json
@@ -30,5 +30,5 @@
     ".next/dev/types/**/*.ts",
     "**/*.mts"
   ],
-  "exclude": ["node_modules", "tools/quesion-ai/**/*"]
+  "exclude": ["node_modules", "tools/question/**/*"]
 }
