--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "framer-motion": "12.34.0",
     "katex": "^0.16.28",
     "lucide-react": "^0.563.0",
+    "mousetrap": "^1.6.5",
     "next": "16.1.6",
     "next-auth": "^4.24.13",
     "next-themes": "^0.4.6",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/mousetrap": "^1.6.15",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
