--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "deploy:build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
-    "tool:question-ai": "tsx tools/question/cli.ts",
+    "tool:question-ai": "tsx tools/generate/cli.ts",
+    "tool:question-resolver": "tsx tools/resolver/cli.ts",
     "lint": "eslint",
     "test": "vitest run --passWithNoTests",
     "test:staged": "vitest related --run --passWithNoTests",
