--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "start": "next start",
     "tool:question-generate": "tsx tools/generator/cli.ts",
     "tool:question-resolve": "tsx tools/resolver/cli.ts",
+    "tool:question-analyze": "tsx tools/analyzer/cli.ts",
     "lint": "eslint",
     "test": "vitest run --passWithNoTests",
     "test:staged": "vitest related --run --passWithNoTests",
