chore: restore billing env placeholders in env example

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,8 @@ DATABASE_URL=postgresql://ti:ti@localhost:5432/ti?schema=ti
 
 AUTH_GOOGLE_ID=your_google_oauth_client_id
 AUTH_GOOGLE_SECRET=your_google_oauth_client_secret
+
+NEXT_PUBLIC_APP_URL=http://localhost:3000
+STRIPE_SECRET_KEY=
+STRIPE_WEBHOOK_SECRET=
+STRIPE_PRO_PRICE_ID=
