--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-markdown": "^10.1.0",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
+    "stripe": "^20.3.1",
     "zustand": "^5.0.11"
   },
   "devDependencies": {
