--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,9 @@ DATABASE_URL=postgresql://ti:ti@localhost:5432/ti?schema=ti
 
 AUTH_GOOGLE_ID=your_google_oauth_client_id
 AUTH_GOOGLE_SECRET=your_google_oauth_client_secret
+AUTH_MICROSOFT_ID=your_microsoft_client_id
+AUTH_MICROSOFT_SECRET=your_microsoft_client_secret
+AUTH_MICROSOFT_TENANT_ID=your_microsoft_tenant_id
 
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 STRIPE_SECRET_KEY=
