--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next-themes": "^0.4.6",
     "nextjs-toploader": "^3.9.17",
     "react": "19.2.3",
+    "react-countup": "^6.5.3",
     "react-dom": "19.2.3",
     "react-markdown": "^10.1.0",
     "rehype-katex": "^7.0.1",
