--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ AUTH_MICROSOFT_SECRET=your_microsoft_client_secret
 AUTH_MICROSOFT_TENANT_ID=your_microsoft_tenant_id
 
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+CAPACITOR_SERVER_URL=http://localhost:3000
 STRIPE_SECRET_KEY=
 STRIPE_WEBHOOK_SECRET=
 STRIPE_PRO_PRICE_ID=
