--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "build": "next build",
     "deploy:build": "prisma generate && prisma migrate deploy && next build",
     "start": "next start",
+    "cap:add:ios": "cap add ios",
+    "cap:add:android": "cap add android",
+    "cap:sync": "cap sync",
+    "cap:open:ios": "cap open ios",
+    "cap:open:android": "cap open android",
     "tool:question-generate": "tsx tools/generator/cli.ts",
     "tool:question-resolve": "tsx tools/resolver/cli.ts",
     "lint": "eslint",
@@ -16,6 +21,7 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@capacitor/core": "^8.1.0",
     "@heroui/react": "2.8.9",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.19.2",
@@ -41,6 +47,9 @@
     "zustand": "^5.0.11"
   },
   "devDependencies": {
+    "@capacitor/android": "^8.1.0",
+    "@capacitor/cli": "^8.1.0",
+    "@capacitor/ios": "^8.1.0",
     "@tailwindcss/postcss": "^4",
     "@types/canvas-confetti": "^1.9.0",
     "@types/mousetrap": "^1.6.15",
