--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@capacitor/core": "^8.1.0",
+    "@capacitor/haptics": "^8.0.1",
     "@heroui/react": "2.8.9",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.19.2",
